# lots

./: .env.sample  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
config/: settings.py  urls.py
lots/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
lots/migrations/: 0001_initial.py  0002_remove_lot_image_lot_main_image_lotimage.py  0003_lot_price.py  0004_lot_preview_image_alter_lotimage_image.py  0005_lotimage_preview_image.py
lots/templatetags/: price.py
lots/utils/: images.py
nginx/: Dockerfile  nginx.conf
static/admin/css/: base_style.css  switch.css
static/assets/css/: autocomplete.css  base_style.css  contacts.css
static/assets/js/: autocomplete.js
telegram_bot/: bot.py  handlers.py  models.py  services.py
telegram_bot/management/commands/: run_bot.py
telegram_bot/migrations/: 0001_initial.py  0002_telegramdialog_status.py  0003_telegramdialog_topic_id.py  0004_telegramdialog_last_admin_msg_id.py  0005_remove_telegramdialog_last_admin_msg_id.py
templates/: base.html
templates/lots/: lot_detail.html  lot_list.html
users/: backends.py  forms.py  models.py
users/migrations/: 0001_initial.py
